--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,14 @@
-<h2>Home</h2>
+<main>
+    <section class="tarefas">
+        <div class="tarefas">
+            <form action="">
+                <input type="radio" id="tarefa-1">
+                <label for="tarefa">Completar curso do javascript</label>
+
+                <button>
+                    <img src="/imagens/x-icon.png" alt="icone de X para excluir tarefa">
+                </button>
+            </form>
+        </div>
+    </section>
+</main>
