--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,6 +11,7 @@
     --button-color:#393A4B;
     --bg-main: #FAFAFA;
     --bg-tarefas: #fff;
+    --box-shadow: 0px 35px 50px -15px rgba(194, 195, 214, 0.550);
 }
 
 header{
@@ -44,7 +45,7 @@ header form input{
     padding: 1.12rem;
     border-radius: 0.3125rem;
     border: none;
-    box-shadow: 8px 35px 58px var(--input-box-shadow);
+    box-shadow: 0px 35px 50px -15px var(--input-box-shadow);
     width: 100%;
     outline: none;
     font-size: 0.75rem;
@@ -60,10 +61,33 @@ header form button{
 
 main {
     background: var(--bg-main);
-    min-height: calc(100vh - 12.5rem);
+    min-height: calc(100vh -12.5rem);
     padding-inline: 1.5rem;
 }
 
 .tarefas {
     background: var(--bg-tarefas);
+    box-shadow: var(--box-shadow);
+    border-radius: 0.3125rem;
+    margin-top: -1.5rem;
+}
+
+.tarefas .tarefa{
+    padding: 1rem 1.25rem;
+}
+
+.tarefa form {
+    display: flex;
+    justify-content: space-between;
+}
+
+.tarefa div{
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+}
+
+.tarefa button{
+    border: none;
+    background: none;
 }
