--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,9 +1,11 @@
 <main>
     <section class="tarefas">
-        <div class="tarefas">
+        <div class="tarefa">
             <form action="">
-                <input type="radio" id="tarefa-1">
-                <label for="tarefa">Completar curso do javascript</label>
+                <div>
+                    <input type="radio" id="tarefa-1">
+                    <label for="tarefa">Completar curso do javascript</label>
+                </div>
 
                 <button>
                     <img src="/imagens/x-icon.png" alt="icone de X para excluir tarefa">
