--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,5 +12,33 @@
                 </button>
             </form>
         </div>
+        <div class="tarefa">
+            <form action="">
+                <div>
+                    <input type="radio" id="tarefa-1">
+                    <label for="tarefa">Completar curso do javascript</label>
+                </div>
+
+                <button>
+                    <img src="/imagens/x-icon.png" alt="icone de X para excluir tarefa">
+                </button>
+            </form>
+        </div>
+        <div class="tarefa">
+            <form action="">
+                <div>
+                    <input type="radio" id="tarefa-1">
+                    <label for="tarefa">Completar curso do javascript</label>
+                </div>
+
+                <button>
+                    <img src="/imagens/x-icon.png" alt="icone de X para excluir tarefa">
+                </button>
+            </form>
+        </div>
+        <div class="informacoes">
+            <p>5 tarefas ativas</p>
+            <a href="">Limpar tarefas</a>
+        </div>
     </section>
 </main>
