--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,7 +9,7 @@
     --bg-header-desktop:url(../imagens/bg-header-desktop-ligth.png);
     --input-box-shadow:rgba(194, 195, 214, 0.58);
     --input-color:#494C6B;
-    --input-bg:#fff
+    --input-bg:#fff;
     --placeholder-color: #9495A5;
     --button-color:#393A4B;
     --button-color-hover:#494C6B;
@@ -68,6 +68,14 @@ header div div{
 
     margin-bottom: 2.5rem;
 }
+
+header button{
+    background: none;
+    border: none;
+    cursor: pointer;
+
+}
+
 header div h1{
     color: #fff;
     text-transform: uppercase;
