--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,10 +1,11 @@
 <main>
     <section class="tarefas">
-        <div class="tarefa">
+        {{#each tarefas}}
+            <div class="tarefa">
             <form action="">
                 <div>
-                    <input type="radio" id="tarefa-1">
-                    <label for="tarefa">Completar curso do javascript</label>
+                    <input type="checkbox" id="tarefa-{{this.id}}">
+                    <label for="tarefa-{{this.id}}">{{this.descricao}}</label>
                 </div>
 
                 <button>
@@ -12,30 +13,8 @@
                 </button>
             </form>
         </div>
-        <div class="tarefa">
-            <form action="">
-                <div>
-                    <input type="radio" id="tarefa-1">
-                    <label for="tarefa">Completar curso do javascript</label>
-                </div>
-
-                <button>
-                    <img src="/imagens/x-icon.png" alt="icone de X para excluir tarefa">
-                </button>
-            </form>
-        </div>
-        <div class="tarefa">
-            <form action="">
-                <div>
-                    <input type="radio" id="tarefa-1">
-                    <label for="tarefa">Completar curso do javascript</label>
-                </div>
-
-                <button>
-                    <img src="/imagens/x-icon.png" alt="icone de X para excluir tarefa">
-                </button>
-            </form>
-        </div>
+        {{/each}}
+        
         <div class="informacoes">
             <p>5 tarefas ativas</p>
 
@@ -48,7 +27,6 @@
             <a href="">Limpar tarefas</a>
         </div>
     </section>
-
     <section class="botoes">
         <a href="" class="active">Todas</a>
         <a href="">Ativas</a>
