--- a/views/completas.handlebars
+++ b/views/completas.handlebars
@@ -18,7 +18,7 @@
         {{/each}}
         
         <div class="informacoes">
-            <p> {{quantidadeTarefas}} Tarefas ativas</p>
+            <p> {{quantidadeTarefas}} Tarefas completas</p>
 
             <div class="botoes">
                 <a href="/">Todas</a>
