--- a/views/completas.handlebars
+++ b/views/completas.handlebars
@@ -10,7 +10,7 @@
                 </div>
                 
 
-                <button>
+                <button onclick="excluirTarefa({{this.id}})">
                     <img src="/imagens/x-icon.png" alt="icone de X para excluir tarefa">
                 </button>
             </form>
@@ -26,7 +26,7 @@
                 <a href="/completas" class="active">Completas</a>
             </div>
 
-            <a href="">Limpar tarefas</a>
+            <a href="/limpartarefas">Limpar tarefas</a>
         </div>
     </section>
     <section class="botoes">
